# tracking-load-faker

./: .coveragerc  .dockerignore  .env.example  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.dev  Gemfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt
.deploy/: check-requirements.sh  lint.sh  test.sh
.deploy/hooks/: pre-commit  pre-push
.hooks/: pre-commit  pre-push
test/: conftest.py  test_docker.bats  test_docker.py  test_locust.py  test_providers.py  test_utils.py  test_visits.py
tracking_load_faker/: __main__.py  _utils.py  locustfile.py  providers.py  utils.py  visits.py
tracking_load_faker/faker-data/: INFO.md  accept_language.yaml  internal_file.yaml  page_url.yaml  product_name.yaml  region.yaml  resolution.yaml  search_engine.yaml
tracking_load_faker/faker_data/: external_url.yaml  gender.yaml  internal_page.yaml  referrer.yaml  search_engine_url_with_keyword.yaml  search_engine_url_without_keyword.yaml
