[tool.poetry]
name = "tracking-load-faker"
version = "0.1.0"
description = "Run load tests against tracking services (like Matomo) using Faker to generate visits"
authors = ["Diógenes Oliveira <diogenes1oliveira@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/diogenes1oliveira/tracking-load-faker"
keywords = ["tracking", "load", "faker", "locust"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Intended Audience :: Developers',
  'Topic :: Software Development :: Testing :: Traffic Generation',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/diogenes1oliveira/tracking-load-faker/issues"

[tool.poetry.dependencies]
python = "^3.6"
Faker = "^3.0"
pyyaml = "^5.3"
locust = "^0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.4"
flake8 = "^3.7"
pytest = "^5.3"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
